syntax = "proto3";

message HeaatMessage{
    // RGB Data, even though we get 32 bits of information, data range is only
    // from 0 - 255 or 8 bits of information since that's really all 
    // the system takes
    int32 red = 1; 
    int32 green = 2;  
    int32 blue = 3; 
    // Once again even though we get 32 bits for information, this 
    // only gives information up to 5 bits of resolution so only send a max value of 32
    // otherwise it won't do anything
    int32 brightness = 4; 
}